# backend-tech-task

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
