[project]
name = "backend-tech-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Sofiia Bondzik",email = "92148110+Bondzik-S@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "locust (>=2.42.0,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
